--- a/app/src/main/res/layout/activity_lista_notas.xml
+++ b/app/src/main/res/layout/activity_lista_notas.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ListView
-        android:id="@+id/listView"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/lista_notas_recycleview"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@id/lista_notas_insere_nota"
@@ -15,7 +15,8 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:listitem="@layout/item_nota" />
 
-    <View android:id="@+id/lista_notas_fundo_gradiente_inferior"
+    <View
+        android:id="@+id/lista_notas_fundo_gradiente_inferior"
         android:layout_width="0dp"
         android:layout_height="5dp"
         android:background="@drawable/fundo_gradiente_insere_nota"
