--- a/app/src/main/res/layout/activity_lista_notas.xml
+++ b/app/src/main/res/layout/activity_lista_notas.xml
@@ -9,6 +9,7 @@
         android:id="@+id/lista_notas_recycleview"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
         app:layout_constraintBottom_toTopOf="@id/lista_notas_insere_nota"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
